Bug 255411 "Use my colors" preference makes popup/hover frames have transparent background r=bzbarsky sr=dbaron